2002-03-28	Thomas Krennwallner <krennwallner@aon.at>

	* doc/wol.texi: improvements

2002-03-27	Thomas Krennwallner <krennwallner@aon.at>

	* doc/texi2pod.pl: added
	* doc/wol.texi: include changes for manpage creation, direntry fix
	* doc/Makefile.am: add wol.1 to EXTRA_DIST
	* po/it.po: fixes and improvements
	* doc/Makefile.am: rm wol.pod on make clean
	* debian: initial debianisation ;-)

2002-03-25	Thomas Krennwallner <krennwallner@aon.at>

	* configure.ac: schedule 0.6.1
	* release 0.6.0
	* src/macfile.c: whale should be size_t, not ssize_t -> fixed

2002-03-21	Thomas Krennwallner <krennwallner@aon.at>

	* doc/wol.texi: add how a magic packet looks like
	* doc/Makefile.am: add stuff for making wol.pdf and wol.html

2002-03-20	Thomas Krennwallner <krennwallner@aon.at>

	* m4/error.m4: added
	* lib/error.{c,h}: GNU error added
	* configure.ac: jm_PREREQ_ERROR
	* src/wol.c: GNU error needs global program_name symbol -> rename name
		to program_name and destatic it ;-)
	* lib/getline.c: fixed return values (int != ssize_t on
		alphaev67-unknown-linux-gnu)
	* doc/wol.texi: fixes
	* src/wol.c: use error() instead of fprintf(stderr, ...)
	* src/net.c: use error() instead of fprintf(stderr, ...)
	* po/{de,fr,it,tr,es}.po: error() usage fixes
	* src/wol.c: complain about missing MAC-ADDRESS arguments ;-)
	* lib/error.{c,h}: taken from glibc-2.2.5

2002-03-19	Thomas Krennwallner <krennwallner@aon.at>

	* demo/nic-fake.py: improvements
	* src/magic.c: improvements
	* src/macfile.c: fixed passwd support through parser state
	* src/macfile.c: fixed a memory corruption bug
	* doc/wol.texi: documentation enhancements and fixes

2002-03-11	Thomas Krennwallner <krennwallner@aon.at>

	* po/it.po: fixed a translation bug
	* configure.ac: removed half-translated files tr.po and es.po

2002-02-26	Thomas Krennwallner <krennwallner@aon.at>

	* po/it.po: updated italian translation

2002-02-25	Thomas Krennwallner <krennwallner@aon.at>
