@@ -1,6 +1,3 @@
 #!/bin/sh
 
-./nic-fake.py  00:11:22:33:22:11  55-11-22-11-44-11 &
-sleep 1
-wol -i 127.0.0.1 00:11:22:33:22:11 -P 55-11-22-11-44-11 > /dev/null
-sleep 1
+./nic-fake.py  00:11:22:33:22:11  55-11-22-11-44-11
